--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+// initial code
 *,
 *::before,
 *::after {
@@ -6,6 +6,8 @@
   padding: 0;
   box-sizing: inherit;
 }
+
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
 * {
   font-family: "Montserrat", sans-serif;
@@ -19,5 +21,3 @@ body {
   background-color: #fbb034;
   background-image: linear-gradient(315deg, #fbb034 0%, #ffdd00 74%);
 }
-
-/*# sourceMappingURL=index.css.map */
